--- a/index.html
+++ b/index.html
@@ -12,25 +12,32 @@
   <p>Please fill out this form with the required information</p>
   <form action="https://register-demo.freecodecamp.org" method="post">
     <fieldset>
-        <label for="first-name">Enter Your First Name: <input id="first-name" type="text" required /></label>
-        <label for="last-name">Enter Your Last Name: <input id="last-name" type="text" required /></label>
-        <label for="email">Enter Your Email: <input id="email" type="email" /></label>
-        <label for="new-password">Create a New Password: <input id="new-password" pattern="[a-z0-5]{8,}" minlength="8" required /></label>
+        <label for="first-name">Enter Your First Name: <input id="first-name" type="text" name="fname" required /></label>
+        <label for="last-name">Enter Your Last Name: <input id="last-name" type="text"  name="lname" required /></label>
+        <label for="email">Enter Your Email: <input id="email" type="email" name="email" /></label>
+        <label for="new-password">Create a New Password: <input id="new-password" pattern="[a-z0-5]{8,}"  name="password" required /></label>
     </fieldset> 
     <fieldset>
-        <label for="personal-account">
-            <input type="radio" name="account-type" id="personal-account"/> Personal Account
+        <label for="personal-account"><input class="inline" type="radio" name="account-type" id="personal-account"/> Personal Account
         </label>
-        <label for="business-account">
-            <input type="radio" name="account-type" id="business-account" /> Business Account
+        <label for="business-account"><input class="inline" type="radio" name="account-type" id="business-account" />   Business Account
         </label>
-        <label for="terms-and-conditions">
-            <input type="checkbox" id="terms-and-conditions" required /> I accept the <a href="https://www.frecodecamp.org/news/terms-of-service/"> terms and conditions</a>
+        <label for="terms-and-conditions"><input class="inline" type="checkbox" id="terms-and-conditions" name="checkbox" required /> I accept the <a href="https://www.frecodecamp.org/news/terms-of-service/"> terms and conditions</a>
         </label>
     </fieldset>
     <fieldset>
-        <label>Upload a profile picture: <input type="file" /></label>
-        <label>Input your age (years): <input type="number" min="13" max="120" /></label>
+        <label for="profile-picture">Upload a profile picture: <input type="file" id="profile-picture" name="profilePic" /></label>
+        <label for="age">Input your age (years): <input type="number" min="13" max="120"  id="age" name="age" /></label>
+        <label for="referrer" name="">How did you hear about us?
+        <select id="referrer" name="referrer">
+            <option value="">(select one)</option>
+            <option value="1">freeCodeCamp News</option>
+            <option value="2">freeCodeCamp YouTube Channel</option>
+            <option value="3">freeDodeCamp Forum</option>
+            <option value="4">Other</option>
+        </select>
+        </label>
+        <label for="bio"><textarea name="bio" id="bio" rows="3" cols="30" placeholder="I like coding on the beach. . ."></textarea>Provide a bio:</label>
     </fieldset>
     <input type="submit" value="Submit" />
   </form>
